test/library/packages/LinearAlgebra/correctness/no-dependencies/testMatrix-error.good
testMatrix-error.chpl:7: error: halt reached - Matrix() expected arrays of equal length
