test/library/packages/LinearAlgebra/correctness/no-dependencies/testMatrix-error.chpl
use LinearAlgebra;

// Test to confirm we get a halt for input arrays of different sizes

proc main() throws {

  var A = Matrix([1, 2, 3],
		 [4, 5, 6, 7],
		 [8, 9, 10]);

}